Fix image variable name and update z-index in Home component

--- a/src/components/Home/index.scss
+++ b/src/components/Home/index.scss
@@ -96,7 +96,7 @@ h2{
     animation: fadeIn 1s 1.8s backwards;
     white-spacing : nowrap;
     border-radius: 5px;
-    z-index: -2;
+    z-index: 2;
     
     &:hover{
         background: #05c977;
